# bme-prog2-nhf

./: CMakeLists.txt  collection.cpp  collection.h  data.cpp  data.h  data.hpp  documentary.cpp  documentary.h  family.cpp  family.h  main.cpp  movie.cpp  movie.h
